[package]
name = "mousecross"
version = "0.1.0"
authors = ["youxkei-live"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.9.1"
gio = "0.9.1"
gtk = { version = "0.9.2", features = ["v3_20"] }
gdk = { version = "0.13.2", features = ["v3_20"] }
x11 = { version = "2.18.2", features = ["xlib"] }
glib = "0.10.3"
